Moved much of the navbar content to a new footer area. Fixed a input field spillover on narrow browsers caused by the indicator an hour total width

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -14,6 +14,10 @@ h2 {
     -moz-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.6);
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.6);
 }
+footer {
+	background:#2f2f2f;
+	color:#6f6f6f;
+}
 #mode, #day {
 	color:#6f6f6f;
 }
