--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ body {
 .show {
 	display:inline-block;
 }
-.nav_wrapper, .main_wrapper {
+.nav_wrapper, .main_wrapper, .footer_wrapper {
 	display:inline-block;
 	width:100%;
 	margin:0 auto;
@@ -32,6 +32,12 @@ body {
 	.nav_wrapper, .main_wrapper {
 		width:960px;
 	}
+}
+footer {
+	background: #fff;
+}
+.footer_wrapper {
+	font-size:1.4rem;
 }
 .nav_wrapper {
 	margin-bottom:10px;
@@ -202,7 +208,7 @@ h3 {
 .hour_num {
 	display:inline;
 	float:right;
-	margin:12px 20px 0 0;
+	margin:12px 16% 0 0;
 	text-align:right;
 }
 .hour_num_current {
@@ -216,7 +222,7 @@ h3 {
 	display:inline;
 	float:right;
 	padding: 3px;
-    margin: 18px 12px 3px 0;
+    margin: 18px 11% 0px 0;
 }
 .input {
 	width:68%;
@@ -293,4 +299,39 @@ h3 {
 		transform: rotate(360deg);
 	}
 }
-  
+/* Flexbox */
+.site {
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+}
+.site_header,
+.site_footer {
+	flex: none;
+}
+.site_content {
+	flex: 1 0 auto; 
+	padding: var(--space) var(--space) 0;
+	width: 100%;
+}
+.site_content::after {
+	content: '\00a0'; /* &nbsp; */
+	display: block;
+	margin-top: var(--space);
+	height: 0px;
+	visibility: hidden;
+}
+@media (--break-lg) {
+	.site_content {
+		padding-top: var(--space-lg);
+	}
+	.site_content::after {
+		margin-top: var(--space-lg);
+	}
+}
+.site_content--full {
+	padding: 0;
+}
+.site_content--full::after {
+	content: none;
+}
